# odoostacks

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: app.py
data/: backtest_sample.csv  backtest_v2.csv
research/competitor-intel/: odoo-marketplace-competitors.md
research/persona-sweep/: DECISION.md
research/platform-briefs/: _template.md  datev.md  quickbooks.md  sage-50.md  tally.md  zoho-books.md
research/reddit-users/: analyze_odooityourself.py  dig_odooityourself.py  fetch_odooityourself.py
research/reddit-users/odooityourself/: PROFILE_SUMMARY.md  about.json  comments.json  comments.jsonl  submitted.json  submitted.jsonl
scripts/: PARTNER_CRAWLER_GUIDE.md  PARTNER_REFERENCES_CRAWLER_GUIDE.md  _check_countries.py  _eta.py  _progress.py  audit_market.py  audit_probability.py  audit_rescore.py  audit_stats.py  backtest_validator.py  capture_eu_screenshots.py  checkin.py  competitor_leaderboard.py  crawl_competitor.py  crawl_european_partners.py  crawl_global_partners.py  crawl_odoo_partners.py  db.py  erp_gap_analysis.py  european_partners.txt  european_partners_real.txt  filter_european_clients.py  gap_analysis.py  load.py  my_european_partners.txt  odoo_partner_crawler.py  odoo_partner_references_crawler.py  partner_analysis.py  planning_stats.py  recommend.py  reddit_README.md  reddit_report.py  scan_youtube_channel.py  score.py  scrape_odoo.py  scrape_reddit.py  test_european_crawler.bat  zoho_gap_analysis.py
